	* field.c (cb_build_field_tree): add validation entry and sisters
	* cobc.c (print_88_values, xref_88_values): use new validation entries
	  instead of checking all word references against the field
	  (huge! time saver and correct order)

2016-11-09  Dave Pitts <dpitts@cozx.com>

	* cobc.c, cobc.h, parser.y, tree.h, typeck.c: Added internal cross
	  reference support.

2016-11-07  Dave Pitts <dpitts@cozx.com>

	* cobc.c (print_88_values): Added to print 88 level values.
	(print_fields): call print_88_values for a variable.

2016-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc/cobc.c (print_program_header): changed the version string limit
	  (including patchlevel) to 14 digits

2016-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (terminator_warning, terminator_error, terminator_clear):
	  COBC_ABORT for invalid calls, warn/error with current_statement and
	  only free stmt when it is valid (currently isn't the case when an alias
	  for a statement is used)

2016-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c (read_string): fixing changes to pointer generated by
	  cobc_main_malloc (needs to stay for later cobc_main_free)
	* error.c, cobc.h: defined own error procedure flex_fatal_error for
	  running cobc's internal error procedures (including showing the
	  current source/line of both the processed COBOL and the generated
	  flex source) instead of a simple error exit
	* pplex.l, scanner.l [__GNUC__]: added pragma to ignore unused
	  functions there as flex generates unused ones
	* Makefile.am: change to auto-edit of files generated by flex

2016-11-02  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l (ppinput): fixed comment paragraphs being rejected in free
	  format (see bug #297).
	* reserved.c (try_remove_removal): stopped freed memory being read.

2016-11-02  Dave Pitts <dpitts@cozx.com>

	* cobc.c (main): Change calls from free() to cobc_free().
